--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://: 172.31.17.234:8081/repository/tesla-web-releases/</url>
+	      <url>http:// 172.31.17.234:8081/repository/tesla-webapp-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
